little things have changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/main.css">
-    <!-- <link rel="stylesheet" href="styles/main1.css"> -->
+    <link rel="stylesheet" href="styles/main1.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <title>Personal-Project-Html-&-Css</title>
@@ -13,8 +13,6 @@
 <body>
     <main>
         <header>
-            <!-- header-component 1 -->
-            <nav id="component-1">
                 <nav class="navbar">
                     <div class="nav-logo navbar">
                         <img src="./images/fox-head.png" alt="">
@@ -37,13 +35,11 @@
                         </li>
                     </ul>
                 </nav>
-            </nav>
 
-            <!-- header-component - 2 -->
             <div id="component-2">
                 <div class="component2-wrap">
                     <div class="component2-content">
-                        <span id="left-Button"><i class="fas fa-chevron-left"></i></span>
+                        <span class="left-Button"><i class="fas fa-chevron-left"></i></span>
                         <div class="iphone-7">
                             <img src="./images/mobiles.png" alt="">
                         </div>
@@ -67,7 +63,7 @@
                                 <div class="second_Hbtn"><span>ONLY $975</span></div>
                             </div>
                         </div>
-                        <span id="right-Button"><i class="fas fa-chevron-right"></i></span>
+                        <span class="right-Button"><i class="fas fa-chevron-right"></i></span>
                     </div>
                     <div class="nav-dots">
                         <div class="dot"></div>
@@ -78,15 +74,13 @@
                 </div>
             </div>
         </header>
-            <!-- component - 3 -->
-        <section id="section-1">
+        <section class="section-1">
                     <div class="section1-wrap">
                         <div class="products-header"><strong>Featured</strong> Products
                             <span  class="sect1-arrows"><i class="fas fa-chevron-right"></i></span>
                             <span  class="sect1-arrows"><i class="fas fa-chevron-left"></i></span>
                         </div>
                         <div class="products-container">
-                            <!-- samsung -->
                             <div class="product">
                                 <div class="productImage"></div>
                                 <div class="productDetails">
@@ -105,7 +99,6 @@
                                     <div><i class="far fa-file-alt"></i>View detail</div>
                                 </div>
                             </div>
-                            <!-- nokia -->
                             <div class="product">
                                     <div class="productImage"></div>
                                     <div class="productDetails">
@@ -124,7 +117,6 @@
                                         <div><i class="far fa-file-alt"></i>View detail</div>
                                     </div>
                                 </div>
-                            <!-- iphone -->
                             <div class="product">
                                     <div class="productImage"></div>
                                     <div class="productDetails">
@@ -143,7 +135,6 @@
                                         <div><i class="far fa-file-alt"></i>View detail</div>
                                     </div>
                                 </div>
-                            <!-- htc -->
                             <div class="product">
                                     <div class="productImage"></div>
                                     <div class="productDetails">
@@ -165,9 +156,7 @@
                             </div>
                         </div>
         </section>
-
-            <!-- component - 4 -->
-            <div class="section-2">
+            <section class="section-2">
                 <div class="sect2-wrap">
                     <div class="shoppingCart">
                         <i class="fas fa-shopping-basket"></i>
@@ -187,10 +176,8 @@
                         PURCHASE NOW
                     </div>
                 </div>
-            </div>
-
-            <!-- component - 5-->
-            <div id="section-3">
+            </section>
+            <section class="section-3">
                 <div class="news-wrap">
                     <div class="top-half">
                         <div class="top-half-InfoWrap">
@@ -265,10 +252,8 @@
         
                     </div>
                 </div>
-            </div>
-
-            <!-- component - 6 -->
-            <div id="section-4">
+            </section>
+            <section class="section-4">
                 <div class="sect-4-wrapper">
                     <div class="sect-4-header">
                         <h3>Recent <span>Products</span></h3>
@@ -487,10 +472,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- component -7 -->
-            <div id="section-5">
+            </section>
+            <section class="section-5">
                     <div class="sect5-wrap">
                         <div class="sect5-header"><strong>Recent </strong>News
                             <span  class="sect5-arrows"><i class="fas fa-chevron-right"></i></span>
@@ -576,10 +559,8 @@
             
                     </div>
                 </div>
-            </div>
-
-            <!-- component -8 -->
-            <div id="section-6">
+            </section>
+            <section class="section-6">
                 <div class="sect6-container">
                     <span id="leftButton"> <i class="fas fa-chevron-left"></i></span>
                     <span id="rightButton"> <i class="fas fa-chevron-right"></i></span>
@@ -596,10 +577,8 @@
                         <div class="laptop-png"><img src="./images/laptop.png" alt=""></div>
                     </div>
                 </div>
-            </div>
-
-            <!-- component - 9 -->
-            <div id="section-7">
+            </section>
+            <div class="section-7">
                     <div class="company-info">
                         <div class="company-info-wrap">
                             <div class="why-wrap">
@@ -643,9 +622,8 @@
                                     </div>
                                 </div>
                             </div>
-            </div>  
-        <!-- component - 10-->
-        <div id="section-8">
+                        </section>  
+        <section class="section-8">
                 <div class="sect-8-wrap">
                     <div class="sect-8-content">
                         <div class="sect-8-item first">
@@ -666,5 +644,5 @@
                         </div>
                     </div>
                 </div>
-            </div>
+        </section>
     </main>
