--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ul>
                 </nav>
 
-            <div id="component-2">
+            <div class="component-2">
                 <div class="component2-wrap">
                     <div class="component2-content">
                         <span class="left-Button"><i class="fas fa-chevron-left"></i></span>
